Fix client-side input validation on forms.

--- a/src/main/resources/public/css/starter-template.css
+++ b/src/main/resources/public/css/starter-template.css
@@ -5,3 +5,13 @@ body {
   padding: 40px 15px;
   text-align: center;
 }
+
+/* Added by Haos to manage currency input.*/
+.currency {
+  padding-left:12px;
+}
+
+.currency-symbol {
+  position:absolute;
+  padding: 7px 4px;
+}
