--- a/src/main/resources/public/css/choco-application-template.css
+++ b/src/main/resources/public/css/choco-application-template.css
@@ -1,7 +1,8 @@
 body {
   padding-top: 50px;
 }
-.starter-template {
+
+.starter-template, .under_construction-template, .home-page-template {
   padding: 40px 15px;
   text-align: center;
 }
